--- a/src/styles/layout/Hero.css
+++ b/src/styles/layout/Hero.css
@@ -1,8 +1,9 @@
 #hero {
 	position: relative;
 	width: 100%;
-	height: 100vh;
-	height: 100dvh;
+	height: 100%;
+	min-height: 100vh;
+	min-height: 100dvh;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
@@ -47,6 +48,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+	overflow-y: hidden;
 }
 
 
